--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
 	<string name="app_name">Movie App</string>
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name="hello_blank_fragment">Hello blank fragment</string>
+	<string name="name">Name</string>
+	<string name="email">Email</string>
+	<string name="submit">Submit</string>
+	<string name="password">Password</string>
 </resources>
