--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 	<string name="email">Email</string>
 	<string name="submit">Submit</string>
 	<string name="password">Password</string>
+	<string name="last_movies">Last Movies</string>
+	<string name="genres">Genres</string>
+	<string name="more_info">More info</string>
 </resources>
