--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 	<string name="last_movies">Last Movies</string>
 	<string name="genres">Genres</string>
 	<string name="more_info">More info</string>
+	<string name="search">Search ....</string>
 </resources>
