--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 	<string name="genres">Genres</string>
 	<string name="more_info">More info</string>
 	<string name="search">Search ....</string>
+	<string name="summary">Summary</string>
+	<string name="actors">Actors</string>
 </resources>
